fix alerts on mobile

--- a/src/css/responsive/_mobile.scss
+++ b/src/css/responsive/_mobile.scss
@@ -122,6 +122,7 @@
 
 
   ul.list li{padding-right:0.1em;padding-left:0.1em;}
+  .alert{padding:0.5em;}
 
 }
 
